--- a/.air.toml
+++ b/.air.toml
@@ -8,13 +8,13 @@ tmp_dir = "tmp"
   exclude_dir = ["assets", "tmp", "vendor"]
   exclude_file = []
   exclude_regex = []
-  exclude_unchanged = false
-  follow_symlink = false
+  exclude_unchanged = true
+  follow_symlink = true
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_ext = ["go"]
   kill_delay = "0s"
-  log = "build-errors.log"
+  log = "air.log"
   send_interrupt = false
   stop_on_error = true
 
@@ -29,4 +29,4 @@ tmp_dir = "tmp"
   time = false
 
 [misc]
-  clean_on_exit = false
+  clean_on_exit = true
