--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             bcascio/docker-swarm-network-attacher:${{ env.TAG }}
