--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
   bin = "./tmp/dsna"
   cmd = "go build -o ./tmp/dsna ."
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor"]
+  exclude_dir = ["assets", "tmp", "vendor", "examples"]
   exclude_file = []
   exclude_regex = []
   exclude_unchanged = true
